[project]
name = "humanitarian_logistics_mediator"
version = "1.0.0"
description = "A high-stakes negotiation environment for humanitarian logistics."
authors = [
    { name = "User" }
]
dependencies = [
    "gradio>=5.1.0",
    "markupsafe>=2.1.5",
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic>=2.0",
    "jinja2",
    "huggingface_hub>=0.24.0",
    "openenv-core>=0.2.0",
    "pillow>=10.4.0",
    "websockets>=15.0.1"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
